# savebutton-gtk

./: .gitignore  FLATHUB_NOTES.md  Makefile  README.md  jest.config.js  meson.build  mise.toml  org.savebutton.SaveButton.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/workflows/: aur.yml  deb.yml  flatpak.yml  gentoo.yml  macos.yml  rpm.yml  snap.yml
build-aux/: bundle-marked.mjs  bundle-temporal.mjs
build-aux/aur/: PKGBUILD
build-aux/deb/: control  postinst
build-aux/flatpak/: org.savebutton.SaveButton.json
build-aux/gentoo/: metadata.xml  savebutton-VERSION_PLACEHOLDER.ebuild
build-aux/macos/: Info.plist.in  bundle.sh  create-dmg.sh  entitlements.plist  kaya-launcher.js  kaya-shell-launcher.sh  make-universal.sh
build-aux/rpm/: savebutton.spec
data/: everything_window.ui  meson.build  new_save_window.ui  org.savebutton.SaveButton.data.gresource.xml  org.savebutton.SaveButton.desktop.in  org.savebutton.SaveButton.gschema.xml  org.savebutton.SaveButton.metainfo.xml.in  preferences.ui  preview_window.ui  style.css  tada.css  window.ui
data/gtk/: help-overlay.ui
data/icons/: meson.build
doc/arch/: adr-0004-linux-macos-platform-divergence.md
doc/design/: DESIGN.md
doc/distros/: DISTROS.md
po/: POTFILES.in  meson.build
snap/: snapcraft.yaml
src/: main.ts  meson.build  org.savebutton.SaveButton.src.gresource.xml
src/models/: anga.ts  auth_provider.ts  auth_state.ts  clock.ts  dropped.ts  filename.ts  markdown_renderer.ts  meta.ts  search_result.ts  tags_list.ts  tile_widget.ts  timestamp.ts
src/models/native_host/: native_host_request.ts
src/services/: auth_service.ts  file_service.ts  logger.ts  meta_service.ts  search_service.ts  settings_service.ts  share_service.ts  sync_manager.ts  sync_service.ts
src/services/native_host/: native_host_server.ts
src/services/sync/: local_repo.ts  server_repo.ts  sync_anga.ts  sync_file.ts  sync_meta.ts  sync_result.ts  sync_words.ts
src/views/: everything_window.ts  new_save_window.ts  preferences.ts  preview_window.ts  tags_entry.ts
tests/: anga.test.ts  auth_provider.test.ts  auth_state.test.ts  dropped.test.ts  filename.test.ts  markdown_renderer.test.ts  meta.test.ts  native_host_request.test.ts  search_result.test.ts  tags_list.test.ts  tile_widget.test.ts  timestamp.test.ts
types/: ambient.d.ts  gettext.d.ts  temporal.d.ts
